# note-block-flask

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  app.py  db_init.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
database/: connect.py
models/: note.py  profile.py
src/: __init__.py  app.py  config.py  extensions.py  routers.py
src/database/: __init__.py  connect.py  database.py
src/models/: __init__.py  note.py  profile.py
src/schemas/: __init__.py  note.py  profile.py  tag.py
src/server/: app.py  celery.py  config.py  routers.py
src/services/: __init__.py  authentication.py  hello.py  note.py  profile.py  tag.py
src/tasks/: tasks.py
src/tests/: test_app.py
src/utils/: auth.py  celery.py  constants.py  status.py
tests/: conftest.py  test_app.py  test_authentication.py  test_hello.py  test_notes.py  test_profiles.py  test_tags.py
