[tool.poetry]
name = "note-block-flask"
version = "0.1.0"
description = ""
authors = ["Pedro Fonseca <contatopedrorn@gmail.com>"]
readme = "README.md"
packages = [{include = "note_block_flask"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
sqlmodel = "^0.0.8"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
ruff = "^0.0.207"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
